# libnextimage-lite

./: .gitignore  CLAUDE.md  COMPAT.md  Makefile  OPTION-REVIEW.md  README.md  README_ja.md  SPEC.md  go.mod
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml  update-binaries.yml
c/: CMakeLists.txt  README.md  README_ja.md
c/include/: nextimage_light.h  nextimage_lite.h
c/src/: avif.c  common.c  internal.h  light.c  webp.c
c/test/: avifdec_compat_test.c  avifenc_compat_test.c  cwebp_compat_test.c  dwebp_compat_test.c  gif2webp_compat_test.c  icc_test.c  light_compat_test.c  orientation_leak_test.c  orientation_test.c
examples/bun/: Makefile  README.md
examples/bun/scripts/: basic-encode.ts
examples/deno/: Makefile  README.md  deno.json
examples/golang/: Makefile  README.md  batch_convert.go  go.mod  jpeg_to_avif.go  jpeg_to_webp.go
examples/nodejs/: Makefile  README.md  package.json
golang/: README.md  README_ja.md  avif.go  avif_compat_test.go  avif_decode_compat_test.go  common.go  compat_test.go  download.go  encoder_test.go  go.mod  light.go  light_test.go  version.go  webp.go  webp_advanced_test.go
golang/shared/include/: nextimage_lite.h
rust/: Cargo.toml  README.md  build.rs
rust/src/: avif.rs  error.rs  ffi.rs  lib.rs  webp.rs
rust/tests/: integration.rs
scripts/: build-c-library.sh  build-cli-tools.sh  install.sh  release-golang-module.sh  setup-go-module.sh  test-compat-webp.sh
showcase/: README.md  index.html  package-lock.json  package.json  style.css  tsconfig.json  viewer.ts  vite.config.ts
showcase/src/: generate.ts  types.ts
typescript/: README.md  README_ja.md  package-lock.json  package.json  tsconfig.json
typescript/bun/: ffi.ts  library.ts  webp-encoder.ts
typescript/deno/: ffi.ts  library.ts  webp-encoder.ts
typescript/src/: avif-decoder.ts  avif-encoder.ts  ffi.ts  gif2webp-converter.ts  index.ts  library.ts  light.ts  types.ts  webp-decoder.ts  webp-encoder.ts  webp2gif-converter.ts
typescript/src/test/: light.test.ts
