[package]
name = "nextimage"
version = "0.5.0"
edition = "2021"
authors = ["Ideamans <info@ideamans.com>"]
description = "High-performance WebP and AVIF image encoding/decoding library"
license = "BSD-3-Clause"
repository = "https://github.com/ideamans/libnextimage-lite"
documentation = "https://docs.rs/nextimage"
readme = "README.md"
keywords = ["webp", "avif", "image", "encoding", "decoding"]
categories = ["multimedia::images", "encoding"]
rust-version = "1.70"

[lib]
name = "nextimage"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
once_cell = "1.19"
flate2 = "1.0"
tar = "0.4"
ureq = { version = "2.9", features = ["json"] }
dirs = "5.0"

[build-dependencies]
cc = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
# Enable auto-download of native library
auto-download = []

[package.metadata.docs.rs]
all-features = true
